# ros2-practice-example

./: README.md
data_processor/: CMakeLists.txt  package.xml  setup.cfg  setup.py
data_processor/data_processor/: laser_subscriber.py  speed_subscriber.py  temp_subscriber.py  temperature_subscriber.py
data_processor/data_processor/utils/: plot.py  signal_handler.py
data_processor/launch/: laser_subscriber_launch.py
data_processor/rviz/: laser_scan_config.rviz
sensor_interfaces/: CMakeLists.txt  package.xml
sensor_interfaces/msg/: Temperature.msg
sensors/: CMakeLists.txt  package.xml
sensors/laser_test_data/: metadata.yaml  pure_laser_2021-11-30-12-55-01.db3
sensors/launch/: laser.launch  speed.launch  temp.launch
sensors/src/: laser.cpp  speed.cpp  temp.cpp
